07-Feb-2012 Opus.Core.DependencyNodeCollection now has a ManualResetEvent (an array of one to be precise) that is signalled when all of it's DependencyNodes have been built. The BuildManager, when an agent is available but there is no Node in a state to be built (waiting on dependencies), will now wait on running Node builds to finish before calling the scheduler again, rather than spinning.

05-Feb-2012 QtCommon.BinPath and LibPath and includePaths are now instance field/properties.

04-Feb-2012 Removed EnvironmentPaths function from Opus.Core.ITool, and added it to it's own interface, Opus.Core.IToolEnvironmentPaths, as the Paths function. Only tools that need to extend the PATH environment need to implement that interface now.

04-Feb-2012 Removed RequiredEnvironmentVariables property from Opus.Core.ITool, and added it to it's own interface, Opus.Core.IToolRequiredEnvironmentVariables, as the VariableNames property. Only tools that need environment variables need to implement that interface now.

02-Feb-2012 Improved ToString() implementation for DependencyNode.

02-Feb-2012 Bug fix to the dependency graph generation, caused by nested dependencies to the same module, resulting in empty collections of dependency nodes.

30-Jan-2012 Removed redundant Thread from Opus.Core.BuildAgent, since the threadpool is used.

29-Jan-2012 Opus.Core.File.SetRelativePath now takes a module's proxy path into account.

29-Jan-2012 While generating the dependent list of packages for compilation, ensure that only those valid for the current platform are considered.

29-Jan-2012 Adding SymLink module types to the FileUtilities package. This supports soft links to files and directories. Native build support is provided. A test package 'SymLinks-dev' is provided to test the support.
